Fixed issue where text inside the button was wrapping on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -634,7 +634,7 @@ footer {
 
   .button {
     font-size: 0.8rem;
-    padding: 0 1.5rem;
+    padding: 0 1rem;
     width: 8rem;
   }
 
